force-app/main/default/objects/Claim_Details__c/Claim_Details__c.object-meta.xml
<CustomObject>
    <label>Claim Detail</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Claim Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>