force-app/main/default/objects/Claim_Details__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.Type</field>
            <operation>equals</operation>
            <value>DTI Claim</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Claim Details</relationshipLabel>
    <relationshipName>Claim_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>