force-app/main/default/objects/Claim_Details__c/fields/Claim_Code__c.field-meta.xml
<CustomField>
    <fullName>Claim_Code__c</fullName>
    <label>Claim Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>305 - Metatarsal Guard - Loose, broken, crooked</fullName>
            </value>
            <value>
                <fullName>306 - Heel Counter or Counter Pocket</fullName>
            </value>
            <value>
                <fullName>309 - Hook/Eyelet/Zipper/Buckle</fullName>
            </value>
            <value>
                <fullName>323 - Tongue/Gusset - Crooked/Torn</fullName>
            </value>
            <value>
                <fullName>324 - Upper, Leather, Torn, Crooked, Scars, Odor</fullName>
            </value>
            <value>
                <fullName>328 - Upper Stitching</fullName>
            </value>
            <value>
                <fullName>331 - Lining: Wrinkled, Loose, Worn, Torn</fullName>
            </value>
            <value>
                <fullName>334 - Toe box or Safety Cap</fullName>
            </value>
            <value>
                <fullName>338 - Leaking</fullName>
            </value>
            <value>
                <fullName>350 - Defective Welt</fullName>
            </value>
            <value>
                <fullName>301 - Squeak or click in sole or shank</fullName>
            </value>
            <value>
                <fullName>304 - Sole Defect: Cracking/Holes/Leadlag/Too Soft</fullName>
            </value>
            <value>
                <fullName>321 - Boot Insole: Lump or Bump</fullName>
            </value>
            <value>
                <fullName>335 - Sole Adhesion to upper or Midsole</fullName>
            </value>
            <value>
                <fullName>104 - Order entry error</fullName>
            </value>
            <value>
                <fullName>105 - Garment does not fit</fullName>
            </value>
            <value>
                <fullName>109 - Customization Error</fullName>
            </value>
            <value>
                <fullName>112 - OK Customer Service</fullName>
            </value>
            <value>
                <fullName>114 - OK Sales Rep</fullName>
            </value>
            <value>
                <fullName>117 - Delivery Refused</fullName>
            </value>
            <value>
                <fullName>310 - Shrinkage</fullName>
            </value>
            <value>
                <fullName>313 - Miscellaneous</fullName>
            </value>
            <value>
                <fullName>333 - Zipper</fullName>
            </value>
            <value>
                <fullName>313 - Miscellaneous defect</fullName>
            </value>
            <value>
                <fullName>375 - Voluntary Recall</fullName>
            </value>
            <value>
                <fullName>030 - 30 Day Comfort</fullName>
            </value>
            <value>
                <fullName>A13 - Defective Accessories (use for non-footwear)</fullName>
            </value>
            <value>
                <fullName>CRRW - In warranty repair charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>