force-app/main/default/objects/Claim_Details__c/fields/Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin__c</fullName>
    <label>Country of Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CN - China</fullName>
            </value>
            <value>
                <fullName>DO - Dominican Republic</fullName>
            </value>
            <value>
                <fullName>M1 - Mexico (Altima)</fullName>
            </value>
            <value>
                <fullName>MX - Mexico (Safety Offshore)</fullName>
            </value>
            <value>
                <fullName>PK - Pakistan</fullName>
            </value>
            <value>
                <fullName>US - United States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>