force-app/main/default/objects/Claim_Details__c/fields/Extended_Price__c.field-meta.xml
<CustomField>
    <fullName>Extended_Price__c</fullName>
    <label>Extended Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>