force-app/main/default/objects/Claim_Details__c/fields/Reason_for_Return__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Return__c</fullName>
    <label>Reason for Return</label>
    <length>100</length>
    <type>Text</type>
</CustomField>