force-app/main/default/objects/Claim_Details__c/fields/Stock_Number__c.field-meta.xml
<CustomField>
    <fullName>Stock_Number__c</fullName>
    <label>Stock Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>